xee-xpath/tests/snapshots/xpath__square_array_sequence.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"[('a', 'b'), 2, 3](1)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    String(
                        String,
                        "a",
                    ),
                ),
                Atomic(
                    String(
                        String,
                        "b",
                    ),
                ),
            ],
        ),
    },
)
