xee-xpath/tests/snapshots/xpath__static_call_with_placeholders.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"my_function(?, 2)(5)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    7,
                ),
            ),
        ),
    },
)
