xee-xpath/tests/snapshots/xpath__static_function_call.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"my_function(5, 2)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    7,
                ),
            ),
        ),
    },
)
