xee-xpath/tests/snapshots/xpath__string_compare_general_eq_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'hello' = 'hello'\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
