xee-xpath/tests/snapshots/xpath__string_document_node.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a>A</a><b>B</b></doc>\"#, \"string(doc)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "AB",
                ),
            ),
        ),
    },
)
