xee-xpath/tests/snapshots/xpath__string_integer.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:string(1)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "1",
                ),
            ),
        ),
    },
)
