xee-xpath/tests/snapshots/xpath__value_eq_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 eq 2\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
