xee-xpath/tests/snapshots/xpath__value_eq_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 eq 1\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
