xee-xpath/tests/snapshots/xpath__value_lt_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 lt 2\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
