xee-xpath/tests/snapshots/xpath__xs_qname.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"xs:QName('xs:bar')\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                QName(
                    Name {
                        name: "bar",
                        prefix: Some(
                            "xs",
                        ),
                        namespace: Some(
                            "http://www.w3.org/2001/XMLSchema",
                        ),
                    },
                ),
            ),
        ),
    },
)
